src/test/ui/parser/issues/issue-84148-1.stderr
error: expected parameter name, found `?`
  --> $DIR/issue-84148-1.rs:1:14
   |
LL | fn f(t:for<>t?)
   |              ^ expected parameter name

error: expected one of `(`, `)`, `+`, `,`, `::`, or `<`, found `?`
  --> $DIR/issue-84148-1.rs:1:14
   |
LL | fn f(t:for<>t?)
   |              ^
   |              |
   |              expected one of `(`, `)`, `+`, `,`, `::`, or `<`
   |              help: missing `,`

error: expected one of `->`, `where`, or `{`, found `<eof>`
  --> $DIR/issue-84148-1.rs:1:15
   |
LL | fn f(t:for<>t?)
   |               ^ expected one of `->`, `where`, or `{`

error: aborting due to 3 previous errors

