src/test/ui/parser/issues/issue-84148-1.rs
fn f(t:for<>t?)
//~^ ERROR: expected parameter name
//~| ERROR: expected one of
//~| ERROR: expected one of
